--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -60,6 +61,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "io.mockk:mockk-android:1.11.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -68,6 +70,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-alpha05'
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.0-alpha05"
 
     //Koin for dependency Injection
     implementation "io.insert-koin:koin-android:$koin_version"
@@ -79,5 +82,5 @@ dependencies {
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
+    kapt 'androidx.room:room-compiler:2.3.0'
 }
