--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="androidx.activity.ComponentActivity"  android:theme="@style/Theme.CvsSample.NoActionBar"/>
+
     </application>
 
 </manifest>
